Generete correct local file name from input QUrl

The recorder can only write to local files. Thus, it should
always try to translate the incoming QUrl into the local file name.

Fixes: QTBUG-97832
Pick-to: 6.2
Change-Id: I779a62686021dda251b2159f2d8f679f8e3af46e
Reviewed-by: André de la Rocha <andre.rocha@qt.io>